--- a/index.html
+++ b/index.html
@@ -1,65 +1,152 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Bio</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+
 <style>
+:root{
+  --bg:#07080b;
+  --card:rgba(255,255,255,.05);
+  --stroke:rgba(255,255,255,.10);
+  --text:#f1f5f9;
+  --muted:#94a3b8;
+  --online:#22c55e;
+  --idle:#f59e0b;
+  --dnd:#ef4444;
+}
+
+*{box-sizing:border-box}
+
 body{
   margin:0;
   font-family:Inter,system-ui;
-  background:radial-gradient(circle at 70% 0%,#1a0b2e,#05070a 60%);
-  color:#fff;
+  background:
+    radial-gradient(800px 400px at 70% 0%, #1a0b2e, transparent 60%),
+    var(--bg);
+  color:var(--text);
   min-height:100vh;
   display:flex;
   align-items:center;
   justify-content:center;
 }
+
 .card{
   width:420px;
-  background:rgba(255,255,255,.05);
-  border:1px solid rgba(255,255,255,.1);
-  border-radius:20px;
   padding:28px;
-  backdrop-filter:blur(20px);
+  border-radius:22px;
+  background:var(--card);
+  border:1px solid var(--stroke);
+  backdrop-filter:blur(25px);
+  box-shadow:0 20px 60px rgba(0,0,0,.6);
 }
+
 .avatar{
-  width:90px;height:90px;
+  width:92px;
+  height:92px;
   border-radius:20px;
   overflow:hidden;
   margin-bottom:18px;
+  border:1px solid var(--stroke);
 }
-.avatar img{width:100%;height:100%;object-fit:cover}
-h1{margin:0 0 6px;font-weight:800}
+
+.avatar img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  display:block;
+}
+
+h1{
+  margin:0 0 6px;
+  font-weight:800;
+  font-size:22px;
+}
+
 .status{
-  display:flex;align-items:center;gap:8px;
-  font-size:14px;color:#aaa;margin-bottom:14px;
+  display:flex;
+  align-items:center;
+  gap:8px;
+  font-size:14px;
+  color:var(--muted);
+  margin-bottom:16px;
 }
-.dot{width:10px;height:10px;border-radius:50%}
-.online{background:#22c55e}
-.idle{background:#f59e0b}
-.dnd{background:#ef4444}
+
+.dot{
+  width:10px;
+  height:10px;
+  border-radius:50%;
+}
+
+.online{background:var(--online)}
+.idle{background:var(--idle)}
+.dnd{background:var(--dnd)}
 .offline{background:#64748b}
-.views{font-size:13px;color:#aaa;margin-top:14px}
+
+.activity{
+  font-size:14px;
+  color:var(--muted);
+  margin-bottom:18px;
+}
+
+.views{
+  font-size:13px;
+  color:var(--muted);
+}
+
+.footer{
+  margin-top:18px;
+  font-size:11px;
+  color:#64748b;
+}
+
+.debug{
+  margin-top:12px;
+  font-size:11px;
+  color:#64748b;
+}
 </style>
 </head>
+
 <body>
 
 <div class="card">
-  <div class="avatar"><img id="pfp"></div>
+
+  <div class="avatar">
+    <img id="pfp" src="https://cdn.discordapp.com/embed/avatars/0.png">
+  </div>
+
   <h1 id="name">Loading...</h1>
+
   <div class="status">
     <div id="dot" class="dot offline"></div>
     <span id="status">offline</span>
   </div>
-  <div id="activity"></div>
-  <div class="views">Views: <span id="views">...</span></div>
+
+  <div id="activity" class="activity">Loading activity...</div>
+
+  <div class="views">
+    Views: <span id="views">...</span>
+  </div>
+
+  <div id="debug" class="debug"></div>
+
+  <div class="footer">
+    live discord • vercel
+  </div>
+
 </div>
 
 <script>
-const USER_ID = "1377987625129869373";
-const $ = (id) => document.getElementById(id);
+const USER_ID = "1377987625129869373"; // <-- your ID (already correct)
+const $ = id => document.getElementById(id);
+
+function log(msg){
+  $("debug").textContent = msg;
+}
 
 function setStatus(status){
   $("status").textContent = status || "offline";
@@ -67,23 +154,30 @@ function setStatus(status){
 }
 
 async function loadViews(){
-  try {
-    const r = await fetch("https://api.countapi.xyz/hit/my-bio-khaki/views", { cache: "no-store" });
+  try{
+    const r = await fetch("https://api.countapi.xyz/hit/my-bio-khaki/vercel", { cache:"no-store" });
     const j = await r.json();
     $("views").textContent = (j.value ?? 0).toLocaleString();
-  } catch {
+  }catch(e){
     $("views").textContent = "—";
   }
 }
 
 async function loadDiscord(){
-  try {
-    const r = await fetch(`https://api.lanyard.rest/v1/users/${USER_ID}`, { cache: "no-store" });
-    const j = await r.json();
-    const d = j?.data;
-    if(!d) return;
+  try{
+    log("Connecting to Discord…");
 
+    const r = await fetch(`https://api.lanyard.rest/v1/users/${USER_ID}`, { cache:"no-store" });
+    const j = await r.json();
+
+    if(!j || !j.data){
+      log("No data returned (wrong ID or blocked)");
+      return;
+    }
+
+    const d = j.data;
     const u = d.discord_user || {};
+
     $("name").textContent = u.global_name || u.username || "User";
 
     if(u.id && u.avatar){
@@ -94,16 +188,28 @@ async function loadDiscord(){
     setStatus(d.discord_status);
 
     const acts = Array.isArray(d.activities) ? d.activities : [];
-    const a = acts.find(x => x && x.name && x.type !== 4) || acts.find(x => x && x.name) || null;
-    $("activity").textContent = a ? `Playing: ${a.name}` : "No activity";
+    const activity =
+      acts.find(a => a && a.name && a.type !== 4) ||
+      acts.find(a => a && a.name) ||
+      null;
 
-  } catch {
-    $("name").textContent = "Error loading Discord";
-    setStatus("offline");
+    if(activity){
+      $("activity").textContent = "Playing: " + activity.name;
+    }else{
+      $("activity").textContent = "No activity";
+    }
+
+    log("Connected ✓");
+
+  }catch(e){
+    log("Blocked by network or extension");
   }
 }
 
 loadViews();
 loadDiscord();
-setInterval(loadDiscord, 15000);
+setInterval(loadDiscord,15000);
 </script>
+
+</body>
+</html>
